--- a/.github/workflows/website-preview.yml
+++ b/.github/workflows/website-preview.yml
@@ -18,7 +18,7 @@ jobs:
         run: echo ${PULL_REQUEST_NUMBER} > dist/version.html
       - name: 'Deploy Site'
         run: |
-          export DEPLOY_DOMAIN=https://preview-${PULL_REQUEST_NUMBER}-element-plus.surge.sh
+          export DEPLOY_DOMAIN=https://preview-${PULL_REQUEST_NUMBER}-test-adaex.surge.sh
           echo "Deploy to $DEPLOY_DOMAIN"
           npx surge --project ./dist --domain $DEPLOY_DOMAIN --token ${{ secrets.SURGE_TOKEN }}
 
