--- a/.github/workflows/depoly.yml
+++ b/.github/workflows/depoly.yml
@@ -30,4 +30,4 @@ jobs:
         with:
           branch: gh-pages # The branch the action should deploy to.
           folder: dist # The folder the action should deploy.
-          repositoryName: adaex/action-gh-pages
+          repository-name: adaex/action-gh-pages
