--- a/.github/workflows/depoly.yml
+++ b/.github/workflows/depoly.yml
@@ -1,10 +1,13 @@
 name: Website deploy
 
-on: push
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   build:
-    name: Website deploy 
+    name: Website deploy
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
