--- a/.github/workflows/preview-deploy.yml
+++ b/.github/workflows/preview-deploy.yml
@@ -3,7 +3,7 @@ name: Website Preview Deploy
 
 on:
   workflow_run:
-    workflows: ['Website Preview']
+    workflows: ["Website Preview"]
     types: [completed]
 
 jobs:
@@ -13,6 +13,12 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
+      - name: Show event
+        run: |
+          echo "github event is $GITHUB_JSON"
+        env:
+          GITHUB_JSON: ${{ toJSON(github.event) }}
+
       - name: Download pr number
         uses: dawidd6/action-download-artifact@v2
         with:
