--- a/.github/workflows/preview-deploy.yml
+++ b/.github/workflows/preview-deploy.yml
@@ -24,8 +24,9 @@ jobs:
       - name: Download artifact
         uses: dawidd6/action-download-artifact@v2
         with:
-          run_id: ${{ github.event.workflow_run.id }}
           name: website
+          run_id: ${{ github.event.workflow_run.id }}
+          workflow: ${{ github.event.workflow_run.workflow_id }}
 
       - name: Deploy Site
         run: |
