--- a/.github/workflows/preview-build.yml
+++ b/.github/workflows/preview-build.yml
@@ -33,3 +33,14 @@ jobs:
           name: website
           path: dist/
           retention-days: 1
+
+      - name: Save pr number
+        if: ${{ always() }}
+        run: echo ${PULL_REQUEST_NUMBER} > ./pr.txt
+
+      - name: Upload pr number
+        if: ${{ always() }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: pr
+          path: ./pr.txt
