--- a/.github/workflows/preview-deploy.yml
+++ b/.github/workflows/preview-deploy.yml
@@ -11,9 +11,7 @@ jobs:
   on-success:
     name: Build successfully
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.event == 'pull_request' && github.event.workflow_run.conclusion == 'success' }}
-    env:
-      PULL_REQUEST_NUMBER: ${{ github.event.workflow_run.pull_requests.number }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Show event
         run: |
@@ -21,18 +19,30 @@ jobs:
         env:
           GITHUB_JSON: ${{ toJSON(github.event) }}
 
+      - name: Download pr number
+        uses: dawidd6/action-download-artifact@v2
+        with:
+          workflow: ${{ github.event.workflow.id }}
+          run_id: ${{ github.event.workflow_run.id }}
+          name: pr
+
+      - name: Output pr number
+        id: pr
+        run: echo "::set-output name=id::$(<pr.txt)"
+
       - name: Download artifact
         uses: dawidd6/action-download-artifact@v2
         with:
-          name: website
+          workflow: ${{ github.event.workflow.id }}
           run_id: ${{ github.event.workflow_run.id }}
-          workflow: ${{ github.event.workflow_run.workflow_id }}
+          name: website
 
       - name: Deploy Site
         run: |
           echo "PULL_REQUEST_NUMBER is $PULL_REQUEST_NUMBER"
         env:
           SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
+          PULL_REQUEST_NUMBER: ${{ steps.pr.outputs.id }}
 
       - name: Deploy has succeeded
         if: ${{ success() }}
@@ -40,6 +50,7 @@ jobs:
           echo "PULL_REQUEST_NUMBER is $PULL_REQUEST_NUMBER"
         env:
           BOT_URL: ${{ secrets.BOT_URL }}
+          PULL_REQUEST_NUMBER: ${{ steps.pr.outputs.id }}
 
       - name: Deploy has failed
         if: ${{ failure() }}
@@ -47,17 +58,28 @@ jobs:
           echo "PULL_REQUEST_NUMBER is $PULL_REQUEST_NUMBER"
         env:
           BOT_URL: ${{ secrets.BOT_URL }}
+          PULL_REQUEST_NUMBER: ${{ steps.pr.outputs.id }}
 
   # Build failed, update comment
   on-failure:
     name: Build failed
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.event == 'pull_request' && github.event.workflow_run.conclusion == 'success' }}
-    env:
-      PULL_REQUEST_NUMBER: ${{ github.event.workflow_run.pull_requests.number }}
+    if: ${{ github.event.workflow_run.conclusion == 'failure' }}
     steps:
+      - name: Download pr number
+        uses: dawidd6/action-download-artifact@v2
+        with:
+          workflow: ${{ github.event.workflow.id }}
+          run_id: ${{ github.event.workflow_run.id }}
+          name: pr
+
+      - name: Output pr number
+        id: pr
+        run: echo "::set-output name=id::$(<pr.txt)"
+
       - name: Update comment
         run: |
           echo "PULL_REQUEST_NUMBER is $PULL_REQUEST_NUMBER"
         env:
           BOT_URL: ${{ secrets.BOT_URL }}
+          PULL_REQUEST_NUMBER: ${{ steps.pr.outputs.id }}
